--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
         android:id="@+id/txtHiWorld"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:alpha="0"
+        android:alpha="1"
         android:background="@color/colorAccent"
         android:text="Hi World!"
         android:textColor="@color/colorPrimary"
@@ -67,5 +67,15 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/tiger"
         android:alpha="0"/>
+
+    <Button
+        android:id="@+id/btnUI"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Bring UI Components "
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtAndroid" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
